kube_waf_test/nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  namespace: devops
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      # schedulerName: custom-scheduler-test
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
          limits:
            cpu: 200m
            memory: 400Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
  namespace: devops
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  labels:
    app: nginx
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: nginx-proxy-protocol
    ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Request-Id: $request_id";
    ingress.kubernetes.io/session-cookie-name: "suker200"
    ingress.kubernetes.io/session-cookie-hash: "md5"
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/force-ssl-redirect: "true" 
spec:
  rules:
    - host: test.suker200.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
